# graphify

./: .gitignore  .graphify_uncached.txt  CHANGELOG.md  README.ja-JP.md  README.ko-KR.md  README.md  README.tr-TR.md  README.zh-CN.md  SECURITY.md  VSCODE_CONTRIBUTION.md  WINDSURF_MCP_INTEGRATION.md  add_baekri.py  botanical_structure.json  build_massive_db.py  check_pages.py  clean_assets.py  debug_out.txt  encyclopedia_mockup.html  extract_all_species.py  extract_sample_page.py  extract_starter_assets.py  extracted_toc_raw.txt  final_fix.py  final_sync.py  find_offset.py  fix_single_species.py  fix_typo.py  full_toc_text.txt  graphify.cmd  graphify.ps1  index_assets.py  parse_full_toc.py  parse_toc.py  parse_toc_final.py  pdf_preview.txt  progress.txt  pyproject.toml  real_extractor.py  rebuild_database.py  restore_thymus.py  (+5 more)
.github/: dependabot.yml
graphify/: __init__.py  __main__.py  aggregate.py  align.py  analyze.py  benchmark.py  build.py  cache.py  cluster.py  constants.py  crawl.py  dependency_policy.py  detect.py  embed.py  export.py  extract.py  extract_arb.py  extract_dart.py  extract_dart_frameworks.py  extract_flutter.py  extract_melos.py  extract_pubspec.py  hooks.py  ingest.py  integrations.py  layer_config.py  lsp_enhance_static_v2.py  pdf_extract.py  pipeline.py  report.py  security.py  semantic.py  serve.py  skill-aider.md  skill-antigravity-windows.md  skill-antigravity.md  skill-claw-windows.md  skill-claw.md  skill-codex.md  skill-copilot-windows.md  (+18 more)
scripts/: check_pinned_dependencies.py
tests/: GRAPH_REPORT_httpx.md  eval_attention.py  test_align.py  test_analyze.py  test_benchmark.py  test_build.py  test_cache.py  test_cli.py  test_cursor_md.py  test_dart.py  test_dependency_policy.py  test_detect.py  test_dry_run.py  test_embed.py  test_embedding_integration.py  test_encoding_roundtrip.py  test_export.py  test_extract.py  test_go_import_nodeid.py  test_hierarchical.py  test_hooks.py  test_idempotent_install.py  test_ingest.py  test_install.py  test_issue52.py  test_kiro.py  test_languages.py  test_main.py  test_multilang.py  test_nimble_ingest.py  test_nimble_live.py  test_pdf_extract.py  test_pipeline.py  test_pipeline_embed.py  test_report.py  test_semantic_query.py  test_serve.py  test_sources.py  test_summarize.py  test_validate.py  (+4 more)
web-visualizer/: README.md  index.html  package-lock.json  package.json  tsconfig.json
worked_team/: layers.yaml
(+88 files in other folders)
