[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "graphifyy"
version = "0.4.13"
description = "AI coding assistant skill (Claude Code, Codex) - turn any folder of code, docs, papers, images, or videos into a queryable knowledge graph"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["claude", "claude-code", "codex", "knowledge-graph", "rag", "graphrag", "community-detection", "tree-sitter", "leiden", "llm"]
requires-python = ">=3.10"
dependencies = [
    "networkx==3.4.2",
    "tree-sitter==0.25.2",
    "tree-sitter-python==0.25.0",
    "tree-sitter-javascript==0.25.0",
    "tree-sitter-typescript==0.23.2",
    "tree-sitter-go==0.25.0",
    "tree-sitter-rust==0.24.2",
    "tree-sitter-java==0.23.5",
    "tree-sitter-c==0.24.1",
    "tree-sitter-cpp==0.23.4",
    "tree-sitter-ruby==0.23.1",
    "tree-sitter-c-sharp==0.23.1",
    "tree-sitter-kotlin==1.1.0",
    "tree-sitter-scala==0.24.0",
    "tree-sitter-php==0.24.1",
    "tree-sitter-swift==0.0.1",
    "tree-sitter-lua==0.5.0",
    "tree-sitter-zig==1.1.2",
    "tree-sitter-powershell==0.26.3",
    "tree-sitter-elixir==0.3.5",
    "tree-sitter-objc==3.0.2",
    "tree-sitter-julia==0.23.1",
    "tree-sitter-verilog==1.0.3",
]

[project.urls]
Homepage = "https://github.com/getethos/graphify"
Repository = "https://github.com/getethos/graphify"
Issues = "https://github.com/getethos/graphify/issues"

[project.optional-dependencies]
mcp = ["mcp==1.27.0"]
neo4j = ["neo4j==6.1.0"]
pdf = ["pypdf==6.10.2", "html2text==2025.4.15"]
watch = ["watchdog==6.0.0"]
svg = ["matplotlib==3.10.8"]
leiden = ["graspologic==0.3.1; python_version < '3.13'"]
office = ["python-docx==1.2.0", "openpyxl==3.1.5"]
video = ["faster-whisper==1.2.1", "yt-dlp==2026.3.17"]
all = ["mcp==1.27.0", "neo4j==6.1.0", "pypdf==6.10.2", "html2text==2025.4.15", "watchdog==6.0.0", "graspologic==0.3.1; python_version < '3.13'", "python-docx==1.2.0", "openpyxl==3.1.5", "faster-whisper==1.2.1", "yt-dlp==2026.3.17", "matplotlib==3.10.8"]

[dependency-groups]
dev = ["pytest==9.0.3", "pip-audit==2.10.0"]

[project.scripts]
graphify = "graphify.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["graphify*"]

[tool.setuptools.package-data]
graphify = ["skill.md", "skill-codex.md"]
